--- a/what_goes_together_level.html
+++ b/what_goes_together_level.html
@@ -5,10 +5,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('images/7958427.jpg');
+      background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
+  
     }
     @media screen and (max-width: 400px) {
       .back-button a {
